# astra.nvim

./: .astra.toml  .env.example  .gitignore  CHANGELOG.md  CLAUDE-CN.md  CLAUDE.md  CONFIG_MANAGEMENT.md  CONTRIBUTING.md  Dockerfile  LAZYVIM-CONFIG-CN.md  LAZYVIM-CONFIG-GUIDE.md  LICENSE  Makefile  README-CN.md  README.md  SOLUTION-SUMMARY.md  SSH-AUTH-FIX.md  SSH-KEY-SOLUTION.md  TROUBLESHOOTING.md  docker-compose.yml  handle-pr.sh  lazyvim-astra-config.lua  lazyvim-astra-simple.lua  run_tests.sh  sync_to_remotes.sh  test-astra.json  test-config.json  test_simplified.lua  test_tilde_fix.sh  test_upload.txt  快速处理PR.md  远程仓库同步指南.md
.astra-settings/: settings-example.toml  settings-password.toml  settings.json  settings.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml
astra-core/: Cargo.toml  I18N_README.md  build.rs  example-config.toml  rustfmt.toml  test_i18n.sh  translations.json  version_manager.sh
astra-core/src/: background.rs  cli.rs  cli_tests.rs  config.rs  error.rs  i18n.rs  integration_tests.rs  main.rs  sftp.rs  sftp_tests.rs  test_tilde.rs  types.rs  types_tests.rs  version.rs
config_sample/: README.md  astra.json  settings.toml  vscode-sftp.json
docs/: 格式化问题分析报告.md
lua/: astra-example.lua  astra.lua
lua/astra/: init_new.lua
lua/astra/core/: binary.lua  config.lua  core.lua  init.lua  sync.lua  ui.lua
lua/plugins/: example_new.lua  sftp.lua
scripts/: build_core.sh  dev_setup.sh  release.sh  test-auth.sh
test/: test_core_functionality.lua
tests/: test_runner.lua
tests/e2e/: test_full_workflow.lua
tests/integration/: test_core_integration.lua
tests/unit/: test_binary.lua  test_config.lua  test_init.lua  test_sync.lua  test_ui.lua
