[package]
name = "astra-core"
version = "0.1.0"
edition = "2021"
authors = ["Astra.nvim Team"]
description = "Neovim SFTP synchronization tool"
license = "MIT"
repository = "https://github.com/blowhunter/astra.nvim"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive", "cargo"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
once_cell = "1.0"
humantime = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
